app/sample/manifests/overlays/kind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
  labels:
    app: sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: fastapi
        image: balwa/sample-app:main-fbd142e-20250222t195154z
        ports:
        - containerPort: 80
